--- a/Smack/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Smack/Base.lproj/Main.storyboard
@@ -10,19 +10,94 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Reveal View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SWRevealViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="aQ6-DX-Ebp" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="Q4b-oC-YtY"/>
+                        <segue destination="hDf-OE-vJj" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="DHZ-ie-hbJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-298" y="-15"/>
+        </scene>
+        <!--ChatVC-->
+        <scene sceneID="CDU-v9-dxy">
+            <objects>
+                <viewController id="hDf-OE-vJj" customClass="ChatVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VwN-3b-EIa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Am-ee-dv1">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1V-1l-8Oo">
+                                        <rect key="frame" x="161" y="45.5" width="52" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgp-5r-obG">
+                                        <rect key="frame" x="12" y="47" width="24" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="18" id="S8x-XV-WgF"/>
+                                            <constraint firstAttribute="width" constant="24" id="ZVT-rC-TPb"/>
+                                        </constraints>
+                                        <state key="normal" image="smackBurger"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.29019607843137252" green="0.30196078431372547" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="hgp-5r-obG" firstAttribute="leading" secondItem="2Am-ee-dv1" secondAttribute="leading" constant="12" id="FWl-k7-ys6"/>
+                                    <constraint firstAttribute="height" constant="77" id="c0p-gH-UtX"/>
+                                    <constraint firstItem="e1V-1l-8Oo" firstAttribute="centerY" secondItem="hgp-5r-obG" secondAttribute="centerY" id="dtd-Df-Rhp"/>
+                                    <constraint firstAttribute="bottom" secondItem="hgp-5r-obG" secondAttribute="bottom" constant="12" id="qJ0-hY-bzK"/>
+                                    <constraint firstItem="e1V-1l-8Oo" firstAttribute="centerX" secondItem="2Am-ee-dv1" secondAttribute="centerX" id="xJF-Zu-HI8"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2Am-ee-dv1" firstAttribute="leading" secondItem="t9g-p0-7aB" secondAttribute="leading" id="5Bi-gn-9op"/>
+                            <constraint firstItem="2Am-ee-dv1" firstAttribute="top" secondItem="VwN-3b-EIa" secondAttribute="top" id="LTS-dm-TiX"/>
+                            <constraint firstItem="2Am-ee-dv1" firstAttribute="trailing" secondItem="t9g-p0-7aB" secondAttribute="trailing" id="idJ-Uw-RkG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="t9g-p0-7aB"/>
+                    </view>
+                    <connections>
+                        <outlet property="menuBtn" destination="hgp-5r-obG" id="ptl-RC-WQx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mH6-1B-ONY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="564" y="454.72263868065971"/>
+        </scene>
+        <!--ChannelVC-->
+        <scene sceneID="80f-kd-CgV">
+            <objects>
+                <viewController id="aQ6-DX-Ebp" customClass="ChannelVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XPi-xa-rSz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="thT-Js-VnX"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zSK-2p-GtR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="564" y="-245"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="smackBurger" width="40" height="40"/>
+    </resources>
 </document>
